--- a/CJC Advanced Midi Merger/SettingsWindow.xaml
+++ b/CJC Advanced Midi Merger/SettingsWindow.xaml
@@ -6,13 +6,14 @@
         xmlns:mdfk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:CJC_Advanced_Midi_Merger"
         mc:Ignorable="d"
-        Title="Settings" Height="200" Width="300" ResizeMode="NoResize">
+        Title="Settings" Height="220" Width="300" ResizeMode="NoResize">
     <Grid>
         <CheckBox Content="Implace merge BPM to the first track" x:Name="ImpBpm" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Implace merge notes to a single track" x:Name="ImpMrg" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Remove all BPM events" x:Name="RemBpm" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Remove empty tracks" x:Name="RemEptt" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
-        <DockPanel Height="24" LastChildFill="False" Margin="10,90,0,0" VerticalAlignment="Top">
+        <CheckBox Content="Convert the original PPQ to the main PPQ" x:Name="trsppq" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
+        <DockPanel Height="24" LastChildFill="False" Margin="10,110,0,0" VerticalAlignment="Top">
             <Label Content="Set offset (ticks)" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
             <mdfk:DecimalUpDown x:Name="offset" Value="0" Increment="1" Maximum="1000000000" Minimum="0" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
         </DockPanel>
