--- a/CJC Advanced Midi Merger/SettingsWindow.xaml
+++ b/CJC Advanced Midi Merger/SettingsWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mdfk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:CJC_Advanced_Midi_Merger"
         mc:Ignorable="d"
-        Title="Settings" Height="220" Width="300" ResizeMode="NoResize">
+        Title="Settings" Height="250" Width="400" ResizeMode="NoResize">
     <Grid>
         <CheckBox Content="Implace merge BPM to the first track" x:Name="ImpBpm" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Implace merge notes to a single track" x:Name="ImpMrg" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
@@ -16,6 +16,10 @@
         <DockPanel Height="24" LastChildFill="False" Margin="10,110,0,0" VerticalAlignment="Top">
             <Label Content="Set offset (ticks)" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
             <mdfk:DecimalUpDown x:Name="offset" Value="0" Increment="1" Maximum="1000000000" Minimum="0" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
+        </DockPanel>
+        <DockPanel Height="24" LastChildFill="False" Margin="10,134,0,0" VerticalAlignment="Top">
+            <Label Content="Remove notes with volume not greater than" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
+            <mdfk:DecimalUpDown x:Name="minvol" Value="-1" Increment="1" Maximum="127" Minimum="-1" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
         </DockPanel>
         <Button Content="OK" Margin="10,0,10,10" Height="25" VerticalAlignment="Bottom" Click="okclick"/>
     </Grid>
