--- a/CJC Advanced Midi Merger/RenderWindow.xaml
+++ b/CJC Advanced Midi Merger/RenderWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CJC_Advanced_Midi_Merger"
         mc:Ignorable="d"
-        Title="Merging MIDIs..." Height="80" Width="400" ResizeMode="NoResize">
-    <TextBlock x:Name="Progress" Margin="10,10,10,10" TextWrapping="NoWrap" Text="Software by CJC Apps. Code by HuaChaoChaoDaYe."/>
+        Title="{DynamicResource MergingMidis}" Height="80" Width="400" ResizeMode="NoResize">
+    <TextBlock x:Name="Progress" Margin="10,10,10,10" TextWrapping="NoWrap" Text="Software by CJC Apps. Code by HuaChaoChaoDaYe." DataContext="{DynamicResource ProcessedTracks}"/>
 </Window>
