--- a/CJC Advanced Midi Merger/SettingsWindow.xaml
+++ b/CJC Advanced Midi Merger/SettingsWindow.xaml
@@ -6,21 +6,24 @@
         xmlns:mdfk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:CJC_Advanced_Midi_Merger"
         mc:Ignorable="d"
-        Title="Settings" Height="250" Width="400" ResizeMode="NoResize">
+        Title="{DynamicResource Settings}" Height="300" Width="400" ResizeMode="NoResize">
     <Grid>
-        <CheckBox Content="Implace merge BPM to the first track" x:Name="ImpBpm" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Implace merge notes to a single track" x:Name="ImpMrg" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Remove all BPM events" x:Name="RemBpm" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Remove empty tracks" x:Name="RemEptt" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Convert the original PPQ to the main PPQ" x:Name="trsppq" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
-        <DockPanel Height="24" LastChildFill="False" Margin="10,110,0,0" VerticalAlignment="Top">
-            <Label Content="Set offset (ticks)" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
-            <mdfk:DecimalUpDown x:Name="offset" Value="0" Increment="1" Maximum="1000000000" Minimum="0" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
+        <CheckBox Content="{DynamicResource ImpBpm}" x:Name="ImpBpm" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource ImpMrg}" x:Name="ImpMrg" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource RemBpm}" x:Name="RemBpm" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource RemPC}" x:Name="RemPC" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource RemPB}" x:Name="RemPB" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource RemEpt}" x:Name="RemEptt" HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="{DynamicResource TrsPpq}" x:Name="trsppq" HorizontalAlignment="Left" Margin="10,130,0,0" VerticalAlignment="Top"/>
+        <DockPanel Height="24" LastChildFill="False" Margin="10,150,0,0" VerticalAlignment="Top">
+            <Label Content="{DynamicResource Offst}" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
+            <mdfk:DecimalUpDown x:Name="offset" Value="0" Increment="1" Maximum="2000000000" Minimum="0" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
         </DockPanel>
-        <DockPanel Height="24" LastChildFill="False" Margin="10,134,0,0" VerticalAlignment="Top">
-            <Label Content="Remove notes with volume not greater than" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
-            <mdfk:DecimalUpDown x:Name="minvol" Value="-1" Increment="1" Maximum="127" Minimum="-1" HorizontalAlignment="Left" Width="82" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
+        <DockPanel Height="24" LastChildFill="False" Margin="10,174,0,0" VerticalAlignment="Top">
+            <Label Content="{DynamicResource MinvolFront}" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
+            <mdfk:DecimalUpDown x:Name="minvol" Value="-1" Increment="1" Maximum="127" Minimum="-1" HorizontalAlignment="Left" Width="56" Height="24" VerticalAlignment="Top" DockPanel.Dock="Left" />
+            <Label Content="{DynamicResource MinvolBack}" HorizontalAlignment="Left" VerticalAlignment="Top" DockPanel.Dock="Left"/>
         </DockPanel>
-        <Button Content="OK" Margin="10,0,10,10" Height="25" VerticalAlignment="Bottom" Click="okclick"/>
+        <Button Content="{DynamicResource OKkey}" Margin="10,0,10,10" Height="25" VerticalAlignment="Bottom" Click="okclick"/>
     </Grid>
 </Window>
